# MemoryMarker

./: .cookiecutter.json  .copier-answers.yml  .cruft.json  .env.sample  .gitignore  .ruff.toml  .sample_env  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.sample.yml  compose.yml  lefthook.yml  pyproject.toml  pyrightconfig.json  pytest.ini  tasks.py
.devcontainer/: devcontainer.json
.github/: Dockerfile.dev
.github/workflows/: docker_release.yml  docker_smoketest.yml  ghcr-publish.yml  release.yml  static_type_checks.yml  test.yml  tests.yml
docs/: conf.py  faq.md  index.md  installation.md
docs/api/: docs_example.md
integration_tests/: first_test.py
memorymarker/: __main__.py  docker.py  main.py  main_cli.py  pipeline_evaluator.py  test_pipeline_evaluator.py
memorymarker/cli/: document_selector.py
memorymarker/data_access/: fileio.py
memorymarker/data_access/highlight_providers/: hypothesis.py
memorymarker/data_access/highlight_providers/hydrator/: main.py  test_hydrator.py
memorymarker/data_access/highlight_sources/: base.py  hypothesis.py  omnivore.py  test_omnivore.py
memorymarker/data_access/hydrator/: main.py  test_hydrator.py
memorymarker/data_access/persist_questions/: markdown.py  test_markdown.py
memorymarker/document_providers/: ContextualizedHighlight.py  Document.py  base.py  contextualised_highlight.py  contextualized_highlight.py  hypothesis.py  omnivore.py  omnivore_document.py  readwise.py  test_omnivore.py
memorymarker/document_providers/hydrator/: main.py  test_hydrator.py
memorymarker/domain/: highlights_to_questions.py  prompts_from_string.py  test_highlights_to_questions.py
memorymarker/highlight_providers/: base.py  hypothesis.py  omnivore.py  test_omnivore.py
memorymarker/highlight_providers/hydrator/: main.py  test_hydrator.py
memorymarker/persist_questions/: markdown.py  test_markdown.py
memorymarker/persist_questions/__snapshots__/: test_markdown.ambr
memorymarker/persister/: markdown.py  test_markdown.py
memorymarker/persister/__snapshots__/: test_markdown.ambr
memorymarker/presentation/: main.py
memorymarker/prompts/: martin_prompt.txt  martin_prompt_minimal.txt
memorymarker/question_generator/: baseline_pipeline.py  chunker.py  example_repo_airtable.py  expanded_pipeline.py  highlight_to_question.py  main.py  pipeline_evaluator.py  pipeline_runner.py  prompts_from_string.py  qa_prompt.py  qa_responses.py  question_generator.py  reasoned_highlight.py  reasoned_pipeline.py  test_highlights_to_questions.py
memorymarker/question_generator/completers/: anthropic_completer.py  completer.py  openai_completer.py
memorymarker/question_generator/flows/: question_flow.py
memorymarker/question_generator/question_generator_evaluator/: example_repo_airtable.py  main.py  pipeline_runner.py  test_main.py  type.py  types.py
memorymarker/question_generator/steps/: final_steps.py  first_steps.py  middle_steps.py  qa_extractor.py  qa_generation.py  question_wikilinker.py  reasoning.py  step.py  test_steps.py
memorymarker/question_generator/steps/__snapshots__/: test_steps.ambr
memorymarker/question_generator_v2/: baseline_pipeline.py  example_repo_airtable.py  main.py  pipeline_runner.py  qa_responses.py  reasoned_highlight.py
questions/: .memorymarker
src/gpt2anki/: fileio.py  highlights_to_questions.py  magi.py  markdown.py  test_magi.py  test_markdown.py
src/gpt2anki/data_access/highlight_sources/: hypothesis.py
src/gpt2anki/data_access/hydrator/: main.py  test_hydrator.py
src/gpt2anki/data_access/persist_questions/: markdown.py  test_markdown.py
src/gpt2anki/domain/: highlights_to_questions.py  prompts_from_string.py  test_highlights_to_questions.py
src/gpt2anki/hydrator/: main.py  test_hydrator.py
src/gpt2anki/presentation/: main.py
src/gpt2anki/sources/: base.py  hypothesis.py
src/memorymarker/: __init__.py
