[project]
version = "0.1.0"
requires-python = ">=3.12"
name = "memorymarker"
description = "memorymarker"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "iterpy>=1.6.0",
  "joblib>=1.3.2",
  "langchain==0.0.300",
  "omnivoreql>=0.2.1",
  "openai==0.28.0",
  "pydantic>=2.6.2",
  "python-dotenv>=1.0.1",
  "pytz>=2024.1",
  "typer>=0.9.0",
  "questionary>=2.0.1",
]
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
classifiers = ["Programming Language :: Python :: 3.12"]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool]
rye = { dev-dependencies = [
    "diff-cover==8.0.3",
    "pyright==1.1.350",
    "pytest>=7.4.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-sugar==1.0.0",
    "ruff==0.2.2",
    "pytest-asyncio>=0.23.5",
    "pytest-testmon>=2.1.0",
    "syrupy>=4.6.1",
    "pytest-dotenv>=0.5.2",
] }

[project.urls]
homepage = "https://github.com/MartinBernstorff/memorymarker"
repository = "https://github.com/MartinBernstorff/memorymarker"
documentation = "https://MartinBernstorff.github.io/memorymarker/"

[project.scripts]
memorymarker = "memorymarker.__main__:app"
mm = "memorymarker.__main__:app"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
